--- a/all-for-gamers/package.json
+++ b/all-for-gamers/package.json
@@ -19,6 +19,7 @@
     "react-image": "^4.0.3",
     "react-native-textarea": "^1.0.4",
     "react-native-video": "^5.1.0-alpha8",
+    "react-player": "^2.6.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "styled-components": "^5.1.1",
